--- a/Makefile.local
+++ b/Makefile.local
@@ -45,12 +45,14 @@ faad2_version 				= 2.7
 opencore-amr_version 		= 0.1.3
 vo-amrwbenc_version			= 0.1.2
 vo-aacenc_version			= 0.1.2
+fdk-aac_version				= git
 xvidcore_version			= 1.3.2
 orc_version 				= 0.4.16
 schroedinger_version 		= 1.0.11
 xavs_version				= svn
 utvideo_version				= 11.1.1
 speex_version 				= 1.2rc1
+frei0r_version				= 1.3
 
 cd-discid_version			= git
 libcdio-paranoia_version	= 10.2+0.90
@@ -58,9 +60,6 @@ abcde_version				= 2.5.4
 atomicparsley_version		= git
 mp4v2_version 				= svn
 gpac_version 				= svn
-
-frei0r_version				= 1.3
-fdk-aac_version				= trunk
 
 #####################################################################
 
@@ -134,11 +133,11 @@ codecs: \
 	libcdio libgsm libmad libass \
 	libogg libvorbis libtheora libbluray libvpx \
 	libaacplus libcaca \
-	opus openjpeg xvidcore x264 \
+	opus openjpeg fdk-aac xvidcore x264 \
 	lame faac faad2 opencore-amr \
 	vo-amrwbenc vo-aacenc \
 	orc schroedinger xavs utvideo speex \
-	frei0r fdk-aac \
+	frei0r \
 
 utilities: cd-discid libcdio-paranoia abcde atomicparsley mp4v2 gpac
 
@@ -810,7 +809,7 @@ faac: $(faac) $(faac)/dezi.done
 # faad2
 #
 
-$(faad2).tar.gz: 
+$(faad2): 
 	wget http://downloads.sourceforge.net/faac/$(faad2).tar.gz
 	tar -xvzf $(faad2).tar.gz 
 	mv -f $(faad2).tar.gz ../download
@@ -979,6 +978,26 @@ speex: $(speex) $(speex)/dezi.done
 
 #####################################################################
 #
+# fdk-aac
+#
+
+$(fdk-aac): 
+	git clone https://github.com/mstorsjo/fdk-aac.git $(fdk-aac)
+	tar -cvzf $(fdk-aac).tar.gz $(fdk-aac)
+	mv -f $(fdk-aac).tar.gz ../download
+
+$(fdk-aac)/dezi.done:
+	cd $(fdk-aac); \
+	autoreconf -fiv; \
+	./configure; \
+	make; \
+	sudo make install; \
+	touch dezi.done
+
+fdk-aac: $(fdk-aac) $(fdk-aac)/dezi.done
+
+#####################################################################
+#
 # xvidcore
 #
 
@@ -1116,148 +1135,22 @@ gpac: $(gpac) $(gpac)/dezi.done
 
 #####################################################################
 #
-# fdk-aac
-#
-
-$(fdk-aac): 
-	git clone https://github.com/mstorsjo/fdk-aac.git $(fdk-aac)
-
-$(fdk-aac)/Makefile:
-	cd $(fdk-aac); \
-	autoreconf -fiv; \
-	./configure; \
-	make; \
-	sudo make install
-
-fdk-aac: $(fdk-aac) $(fdk-aac)/Makefile
-
-#####################################################################
-#
 # frei0r
 #
 
-$(frei0r).tar.gz: 
+$(frei0r): 
 	wget http://www.piksel.no/frei0r/releases/frei0r-plugins-$(frei0r_version).tar.gz -O $(frei0r).tar.gz
-
-$(frei0r)/Makefile:
 	tar -xvzf $(frei0r).tar.gz
+	mv -f $(frei0r).tar.gz ../download
+
+$(frei0r)/dezi.done:
 	cd $(frei0r); \
 	./configure --enable-static --enable-shared; \
 	make; \
-	sudo make install
-
-frei0r: $(frei0r).tar.gz $(frei0r)/Makefile
-#####################################################################
-#
-# ffmpeg
-#
-
-ffmpeg-trunk: 
-	git clone git://source.ffmpeg.org/ffmpeg ffmpeg-trunk
-	
-ffmpeg-common = \
-	--enable-gpl \
-	--enable-version3 \
-	--enable-nonfree \
-	--enable-runtime-cpudetect \
-	--enable-hardcoded-tables \
-	--enable-zlib \
-	--enable-bzlib \
-	--enable-gnutls \
-	--enable-librtmp \
-	--enable-libfreetype \
-	--enable-libfdk-aac \
-	--enable-libopencore-amrnb \
-	--enable-libopencore-amrwb \
-	--enable-libvo-aacenc \
-	--enable-libvo-amrwbenc \
-	--enable-libmp3lame \
-	--enable-libopenjpeg \
-	--enable-libtheora \
-	--enable-libvorbis \
-	--enable-libspeex \
-	--enable-libass \
-	--enable-libopus \
-	--enable-libgsm \
-	--enable-libvpx \
-	--enable-libxavs \
-	--enable-libxvid \
-	--enable-libx264 \
-	--enable-libbluray \
-	--enable-libschroedinger \
-	--enable-libutvideo \
-	--enable-libcdio \
-	--enable-fontconfig \
-	--enable-frei0r \
-	--enable-filter=frei0r \
-	
-ffmpeg-static = \
-	--disable-ffserver \
-	--disable-shared \
-	--enable-static \
-	--extra-cflags=--static	\
-	--extra-libs="-lm" \
-	--extra-libs="-ldl" \
-	--extra-libs="-lrt" \
-	--extra-libs="-lexpat" \
-	--extra-libs="-lfreetype" \
-	--extra-libs="-lfontconfig" \
-	--extra-libs="-lfribidi" \
-	--extra-libs="-lorc-0.4" \
-	--extra-libs="-lgmp" \
-	--extra-libs="-lhogweed" \
-	--extra-libs="-lnettle" \
-	--extra-libs="-lgnutls" \
-	--extra-libs="-ljpeg" \
-	--extra-libs="-lcdio" \
-	--extra-libs="-lcdio_cdda" \
-	--extra-libs="-lcdio_paranoia" \
-	--extra-libs="-static" \
-	
-ffmpeg-shared = \
-	--enable-shared \
-	--extra-libs="-ljpeg" \
-	--extra-libs="-lcdio" \
-	--extra-libs="-lcdio_cdda" \
-	--extra-libs="-lcdio_paranoia" \
-	
-ffmpeg-moreoptions-dont-work:
-
-ffmpeg-moreoptions-dont-want:
-	--disable-mmx \
-	--enable-libfaac \
-	--disable-w32threads \
-	
-ffmpeg-trunk/config.static.done:
-	cd ffmpeg-trunk; \
-	sed -i "s/if HAVE_CDIO_PARANOIA_H/if 1/g" libavdevice/libcdio.c; \
-	make clean; \
-	rm -f ffmpeg ffplay ffprobe ffserver; \
-	rm -f ffmpeg_g ffplay_g ffprobe_g ffserver_g; \
-	./configure $(ffmpeg-static) $(ffmpeg-common); \
-	make || exit; \
 	sudo make install; \
-	sudo mv -f /usr/local/bin/ffmpeg  /usr/local/bin/ffmpeg-static; \
-	sudo mv -f /usr/local/bin/ffplay  /usr/local/bin/ffplay-static; \
-	sudo mv -f /usr/local/bin/ffprobe /usr/local/bin/ffprobe-static; \
-	touch config.static.done
-	
-ffmpeg-trunk/config.shared.done:
-	cd ffmpeg-trunk; \
-	sed -i "s/if HAVE_CDIO_PARANOIA_H/if 1/g" libavdevice/libcdio.c; \
-	make clean; \
-	rm -f ffmpeg ffplay ffprobe ffserver; \
-	rm -f ffmpeg_g ffplay_g ffprobe_g ffserver_g; \
-	./configure $(ffmpeg-shared) $(ffmpeg-common); \
-	make || exit; \
-	sudo make install; \
-	sudo mv -f /usr/local/bin/ffmpeg   /usr/local/bin/ffmpeg-shared; \
-	sudo mv -f /usr/local/bin/ffplay   /usr/local/bin/ffplay-shared; \
-	sudo mv -f /usr/local/bin/ffprobe  /usr/local/bin/ffprobe-shared; \
-	sudo mv -f /usr/local/bin/ffserver /usr/local/bin/ffserver-shared; \
-	touch config.shared.done
-	
-ffmpeg: ffmpeg-trunk ffmpeg-trunk/config.static.done ffmpeg-trunk/config.shared.done 
+	touch dezi.done
+
+frei0r: $(frei0r) $(frei0r)/dezi.done
 
 #####################################################################
 #
