--- a/Makefile.local
+++ b/Makefile.local
@@ -61,6 +61,7 @@ atomicparsley_version		= git
 mp4v2_version 				= svn
 gpac_version 				= svn
 tvheadend_version 			= git
+v8_version 					= git
 
 #####################################################################
 
@@ -116,6 +117,7 @@ libbluray = libbluray-$(libbluray_version)
 abcde = abcde-$(abcde_version)
 atomicparsley = atomicparsley-$(atomicparsley_version)
 tvheadend = tvheadend-$(tvheadend_version)
+v8 = v8-$(v8_version)
 
 ######################################################################
 #
@@ -1181,5 +1183,17 @@ tvheadend: $(tvheadend) $(tvheadend)/dezi.done
 # v8
 #
 
-v8: 
-	git clone git://github.com/v8/v8.git v8-trunk
+$(v8): 
+	git clone git://github.com/v8/v8.git $(v8)
+	tar -cvzf $(v8).tar.gz $(v8)
+	mv -f $(v8).tar.gz ../download
+
+$(v8)/dezi.done:
+	cd $(v8); \
+	export CC=gcc-4.7; \
+	make dependencies; \
+	make native hardfp=on; \
+	sudo make install; \
+	touch dezi.done
+
+v8: $(v8) $(v8)/dezi.done
